--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "chart.js": "^2.7.1",
+    "vue": "^2.5.2",
+    "vue-chartjs": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
